==== Version 1.1.0

* enhancements
  * Refactored internal code and specs
  * Translate be_nil
  * Translate be_true
  * Translate be_false
  * Translate be_empty.
  

=== Version 1.0.0

* enhancements
  * Support for rspec 1.3
  * Add the translation of following matchers: be_close, be_instance_of, 
    be_kind_of, eql, equal, exist, have(have_exactly), have_at_least, 
    have_at_most, include, match, raise_error(raise_exception), satisfy
  * Add the translation of subject keywords(subject, its, should and should_not)
  * Add the matchers and hooks in executable list keywords
  * Removing the cucumber dependency and add term-ansicolor and    
    terminal-table dependency
  * Add the be predicates for the rspec 1.3
  * Refactoring Parser::NaturalLanguage.get(SpecI18n.spec_language) 
    duplications

=== Version 0.2.1

This release has some bugfixes in the command_line executable

* Quick Fix the namespaces and add more spec for it

=== Version 0.2.0

This release has improvements to the commandline and some fixes internals

* Added a spec-i18n executable(to see languages and the keywords)

=== Version 0.1.0

This is the first preview release of Rspec-i18n, a Internacionalization Development library for Ruby.

* Added translation to all the base keywords(describe, it, should, should_not,
  before(:each), before(:all), before(:suite), after(:each), after(:all),
  after(:suite))
* Added a languages.yml. Will be translated to all languages.
* Added a simple parser for the read the languages in languages.yml.